crates/kyac/snapshots/kyac__pass__typecheck__tests__free_fun_cast_err.snap
---
source: crates/kyac/src/pass/typecheck.rs
expression: errors
---
Err(
    [
        PreciseError {
            filename: "test-cases/typecheck/generics/free-fun-cast-err.kya",
            heading: "Foo is not a subclass of T",
            source: "    freeFunction(foo);",
            span: Span {
                line: 11,
                column: 18,
                length: 3,
            },
            text: "expression of type Foo",
        },
    ],
)
