crates/kyac/snapshots/kyac__pass__typecheck__tests__undef_generic_type.snap
---
source: crates/kyac/src/pass/typecheck.rs
expression: errors
---
Err(
    [
        PreciseError {
            filename: "test-cases/typecheck/generics/undef-generic-type.kya",
            heading: "`R` is not defined",
            source: "    fun print<T: Print>(self, val: R) {}",
            span: Span {
                line: 6,
                column: 36,
                length: 1,
            },
            text: "",
        },
    ],
)
